GKEDeployment/EndpointDeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: endpoint
spec:
 replicas: 2
 template:
   metadata:
     labels:
       app: endpointapp
   spec:
     containers:
       - name: endpointapp
         image: gcr.io/jokerchat/jokerchat.endpoint:0.15
         ports:
           - containerPort: 80
