GKEDeployment/HubDeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: hub
spec:
 replicas: 2
 template:
   metadata:
     labels:
       app: hubapp
   spec:
     containers:
       - name: hubapp
         image: gcr.io/jokerchat/jokerchat.hub:0.11
         ports:
           - containerPort: 80
