GKEDeployment/RedisPod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: redis
 labels:
   app: redis
spec:
 containers:
   - name: redis
     image: redis
     ports:
       - containerPort: 6379
