GKEDeployment/ClientAppService.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: clientapp
  ports:
    - name: clientapp-http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
