GKEDeployment/ClientAppIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
spec:
  backend:
    serviceName: client-service
    servicePort: clientapp-http
