GKEDeployment/EndpointIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: endpoint-ingress
spec:
  backend:
    serviceName: endpoint-service
    servicePort: endpoint-http
