GKEDeployment/HubIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hub-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hub-ingress
spec:
  backend:
    serviceName: hub-service
    servicePort: hubapp-http
